# cqrs

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  app.Dockerfile  celery.Dockerfile  docker-compose.yaml  main.py  postgres.Dockerfile  pyproject.toml
app/: main.py  settings.py
app/api_v1/user_router/: router.py
app/api_v1/user_router/handlers/: command.py  query.py
app/api_v1/user_router/repository/: crud.py  models.py
app/api_v1/user_router/schemas/: body_schema.py  read_schema.py  write_schema.py
app/api_v1/user_router/services/: command.py  query.py
app/helpers/: celery_app.py  celery_tasks.py  cryptography.py  custom_requests.py  db.py  exceptions.py  middlewares.py  rabbitmq.py
